spring_ordersystem/k8s/ordersystem_depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ordersystem-deployment
  namespace: seulki
spec:
  replicas: 2 
  selector: 
    matchLabels:
        app: ordersystem
  template: # template : pod 정의
    metadata:
      labels: 
        app: ordersystem
    spec:
      containers:
        - name: ordersystem
        # aws의 ecr 주소 사용
          image: 346903264902.dkr.ecr.ap-northeast-2.amazonaws.com/seulki-ordersystem:latest
          ports: 
          - containerPort: 8080
          resources:
          # 최대 할당가능량
            limits:
              cpu: "0.2"
              memory: "500Mi"
          # 최소 할당가능량
            requests:
              cpu: "0.2"
              memory: "250Mi"
