spring_ordersystem/k8s/ordersystem_service.yml
apiVersion: v1
kind: Service
metadata:
  name: ordersystem-service
  namespace: seulki
spec: 
# ingress를 적용하기 위해 ClusterIp로 변경
  type: ClusterIP
  ports: 
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: ordersystem # Pod의 labels.app은 service의 selector.app의 이름과 싱크가 맞아야한다.
