spring_ordersystem/k8s/ordersystem_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ordersystem-ingress
  namespace: seulki
  annotations:
    kubernetes.io/ingress.class: nginx # ingress controller -> nginx로 만들어졌다.
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - "server.wisdom0405.shop" # 도메인명
    secretName: wisdom0405-com-tls # Certificate의 secertName 동일하게 지정
  rules:
    - host: server.wisdom0405.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ordersystem-service
                port: 
                  number: 80
